vendor/cargo/parameterized-macro-2.0.0/tests/ok/13_import_rename.rs
use parameterized_macro::parameterized as pm;

#[pm(v = { (), () })]
fn my_test(v: ()) {}

fn main() {}
