vendor/cargo/parameterized-macro-2.0.0/tests/fail/no_param.rs
use parameterized_macro::parameterized;

#[parameterized(y = { 1, 2, 3 })]
fn my_test(x: i32) {}

fn main() {}
